--- a/mean_variance_optimization.ipynb
+++ b/mean_variance_optimization.ipynb
@@ -9,6 +9,7 @@
         "This notebook implements and compares two optimization algorithms for portfolio optimization:\n",
         "1. **Projected Gradient Descent (PGD) on Simplex**\n",
         "2. **Penalty Gradient Descent**\n",
+        "3. **Augmented Lagrangian Method (ALM)**\n",
         "\n",
         "## Problem Setup\n",
         "\n",
